--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ highlighter: rouge
 markdown: kramdown
 plugins:
   - jemoji
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 kramdown:
   input: GFM
