--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,4 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
 
-pagination:
-  enabled: true
-  per_page: 3
-  limit: 0
-  sort_field: "date"
-  sort_reverse: true
+pagination: 3
