--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: All of Bayesian
+title: Bayesian tour
 
 email: "sunnybenlim@gmail.com"
-url: "http://bayesian.github.io"
+url: "https://bayesian.github.io/bayestour"
 github_url: "http://github.com/sungbinlim/sl"
 github_editurl: "/blob/gh-pages"
 github_profile: "http://github.com/sungbinlim"
