--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Bayesian tour
 
 email: "sunnybenlim@gmail.com"
 url: "https://bayesian.github.io/bayestour"
-github_url: "http://github.com/sungbinlim/sl"
+github_url: "http://github.com/sungbinlim/bayestour"
 github_editurl: "/blob/gh-pages"
 github_profile: "http://github.com/sungbinlim"
 baseurl: "/sl"
