--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 title: Bayesian tour
 
 email: "sunnybenlim@gmail.com"
-url: "https://bayesian.github.io/bayestour"
+url: "https://sungbinlim.github.io/bayestour"
 github_url: "http://github.com/sungbinlim/bayestour"
 github_editurl: "/blob/gh-pages"
 github_profile: "http://github.com/sungbinlim"
-baseurl: "/sl"
+baseurl: "/bayestour"
 
 exclude:
   - README.md
